Tone down the name on small screens. Avoids horizontal scrolling

--- a/style/mainstyle.scss
+++ b/style/mainstyle.scss
@@ -75,9 +75,15 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 180%;
+    font-size: 150%;
     border: none;
     margin: 0;
+}
+
+@media (min-width: $main-break) {
+    h1 {
+        font-size: 180%;
+    }
 }
 
 h2 {
